--- a/build.gradle
+++ b/build.gradle
@@ -11,9 +11,11 @@ sourceCompatibility = '11'
 repositories {
 	mavenCentral()
 }
-
+//https://mvnrepository.com/
 dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	runtimeOnly 'org.postgresql:postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
