--- a/src/main/resources/application-pdn.properties
+++ b/src/main/resources/application-pdn.properties
@@ -1,6 +1,6 @@
-server.port=8080
+server.port=${PORT}
 
 #Database
-spring.datasource.url=jdbc:postgresql://localhost:5432/platzi-market
-spring.datasource.username=postgres
-spring.datasource.password=superuser
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASPOURCE_PASSWORD}
